; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/validator/extr_validator.c_sentinel_get_keytag.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/validator/extr_validator.c_sentinel_get_keytag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SENTINEL_KEYTAG_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64*)* @sentinel_get_keytag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sentinel_get_keytag(i8* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i64* %1, i64** %5, align 8
  store i8* null, i8** %7, align 8
  %8 = load i32, i32* @SENTINEL_KEYTAG_LEN, align 4
  %9 = add nsw i32 %8, 1
  %10 = call i8* @calloc(i32 1, i32 %9)
  store i8* %10, i8** %6, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %39

14:                                               ; preds = %2
  %15 = load i8*, i8** %6, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = load i32, i32* @SENTINEL_KEYTAG_LEN, align 4
  %18 = call i32 @memmove(i8* %15, i8* %16, i32 %17)
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* @SENTINEL_KEYTAG_LEN, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i8, i8* %19, i64 %21
  store i8 0, i8* %22, align 1
  %23 = load i8*, i8** %6, align 8
  %24 = call i64 @strtol(i8* %23, i8** %7, i32 10)
  %25 = load i64*, i64** %5, align 8
  store i64 %24, i64* %25, align 8
  %26 = load i8*, i8** %7, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %28, label %33

28:                                               ; preds = %14
  %29 = load i8*, i8** %7, align 8
  %30 = load i8, i8* %29, align 1
  %31 = sext i8 %30 to i32
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %36

33:                                               ; preds = %28, %14
  %34 = load i8*, i8** %6, align 8
  %35 = call i32 @free(i8* %34)
  store i32 0, i32* %3, align 4
  br label %39

36:                                               ; preds = %28
  %37 = load i8*, i8** %6, align 8
  %38 = call i32 @free(i8* %37)
  store i32 1, i32* %3, align 4
  br label %39

39:                                               ; preds = %36, %33, %13
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i8* @calloc(i32, i32) #1

declare dso_local i32 @memmove(i8*, i8*, i32) #1

declare dso_local i64 @strtol(i8*, i8**, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
